vagrant/CRUD/notes/UpdateSQLAlchemy.txt
vagrant@vagrant:/vagrant/catalog$ python
Python 2.7.12 (default, Nov 19 2016, 06:48:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> # http://docs.sqlalchemy.org/en/rel_0_9/orm/query.html#the-query-object
... 
>>> from sqlalchemy import create_engine
>>> from sqlalchemy.orm import sessionmaker
>>> from database_setup import Base, Restaurant, MenuItem
>>> engine = create_engine('sqlite:///restaurantmenu.db')
>>> Base.metadata.bind = engine
>>> DBSession = sessionmaker(bind = engine)
>>> session = DBSession()
>>> veggieBurgers = session.query(MenuItem).filter_by(name="Veggie Burger")
>>> for v in vaggieBurgers:
...     print v.id
...     print v.price
...     print v.restaurant.name
...     print "\n"
... 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'vaggieBurgers' is not defined
>>> for v in veggieBurgers:
...     print v.id
...     print v.price
...     print v.restaurant.name
...     print "\n"
... 
2
$7.50
Urban Burger


10
$5.99
Urban Burger


21
$9.50
Panda Garden


27
$6.80
Thyme for That Vegetarian Cuisine 


37
$7.00
Andala's


43
$9.50
Auntie Ann's Diner' 


>>> vb = session.query(MenuItem).filter_by(id=8).one()
>>> print vb.price
$.99
>>> vb.price = '$2.99'
>>> session.add(vb)
>>> session.commit()
>>> for v in veggieBurgers:
...     print v.id
...     print v.price
...     print v.restaurant.name
...     print "\n"
... 
2
$7.50
Urban Burger


10
$5.99
Urban Burger


21
$9.50
Panda Garden


27
$6.80
Thyme for That Vegetarian Cuisine 


37
$7.00
Andala's


43
$9.50
Auntie Ann's Diner' 


>>> vb = session.query(MenuItem).filter_by(id=10).one()
>>> print vb.price
$5.99
>>> $.99
  File "<stdin>", line 1
    $.99
    ^
SyntaxError: invalid syntax
>>> vb.price = '$2.99'
>>> session.add(vb)
>>> session.commit()
>>> 
>>> for v in veggieBurgers:
...     print v.id
...     print v.price
...     print v.restaurant.name
...     print "\n"
... 
2
$7.50
Urban Burger


10
$2.99
Urban Burger


21
$9.50
Panda Garden


27
$6.80
Thyme for That Vegetarian Cuisine 


37
$7.00
Andala's


43
$9.50
Auntie Ann's Diner' 


>>> for vb in veggieBurgers:
...     if vb.price != '$2.99':
...             vb.price = '$2.99'
...             session.add(vb)
...             session.commit()
... 
>>> for v in veggieBurgers:
...     print v.id
...     print v.price
...     print v.restaurant.name
...     print "\n"
... 
2
$2.99
Urban Burger


10
$2.99
Urban Burger


21
$2.99
Panda Garden


27
$2.99
Thyme for That Vegetarian Cuisine 


37
$2.99
Andala's


43
$2.99
Auntie Ann's Diner' 


>>> 
